uptime/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: up # Moet dezelfde zijn als in deployment.yaml
spec:
  selector:
    app: up
  type: ClusterIP
  ports:
  - name: up
    protocol: TCP
    port: 80 #listing port 
    targetPort:  3001 #forwarding port, 3000 omdat 3000 in deployment.yaml
