uptime/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: up
spec:
  rules:
  - host: up.cloudops-17.ucll.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: up
            port:
              number: 80
